# DFA

./: .gitignore  LICENSE  README.md  TODO  dfa.c  meson.build  parser.c  parser.h  syntax.txt  test.dfa
include/: parser.h
test/: test.dfa  test2.dfa  test3.dfa  test4.dfa
